# open-pd

./: .gitignore  .gitmodules  Makefile  README.mkd  amplifier.ipynb  back.gvp  front.gvp  gafrc  gnetlistrc  gschemrc  init.sh  power-meter.pcb  power-meter.sch  project  project.sch
firmware/: .gitignore  Makefile  acquire.sh  power-meter.c  power-meter.desc
host/: 99-openpd.rules  README.mkd  openpd  openpd-acquire  openpd-daemon  openpd-daemon.service  openpd-profile  openpd-winsvc.py  openpd.bat  openpd.py  plot-power  setup.py  win7_driver_x86_x64.inf
meter/: Main.hs  README.mkd  index.html  openpd-meter.cabal  plot.js
sym/: analog-switch-power.sym  analog-switch.sym  k20.tsym  l79lxx.tsym  lp5907.tsym  opa2376.sym  smt-pushbutton-no.sym  tmp10x.tsym  usbmini.sym
