name:                openpd-meter
version:             0.1.0.0
synopsis:            Power emter
-- description:         
homepage:            http://www.github.com/bgamari/openpd
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2015 Ben Gamari
category:            Web
build-type:          Simple
cabal-version:       >=1.10
data-files:          index.html, plot.js

executable openpd-meter
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.9,
                       bytestring >=0.10 && <0.11,
                       text >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3,
                       aeson >= 0.8 && < 0.9,
                       scotty >=0.9 && <0.10,
                       websockets >=0.9 && <0.10,
                       zeromq4-haskell >=0.6 && <0.7,
                       stm >=2.4 && <2.5,
                       async,
                       warp >= 3.0 && < 3.1,
                       wai-websockets,
                       file-embed
  if os(windows)
    build-depends:       Win32-services >= 0.2 && < 0.3
    cpp-options:         -DWINDOWS
  default-language:    Haskell2010
